add container ,sidebar , profile pic ,sidebar-sectoin ,contact-info

--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BD Calling First Class</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bold Sidebar Resume</title>
+
 </head>
+
 <body>
-    <header>
-        <h1>BD Calling First Class</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Welcome!</h2>
-            <p>This is the initial structure of your project.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 BD Calling First Class. All rights reserved.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos optio debitis suscipit eos asperiores porro dolorum, itaque voluptate laudantium quo labore accusamus nulla quod iste corrupti architecto sed voluptatibus!</p>
-    </footer>
+
+    <div class="container">
+        <aside class="sidebar">
+            <img src="IMG_8216.JPG" alt="Profile Picture" class="profile-pic" />
+            <div class="name">Foysal miah</div>
+            <div class="title">Web Developer</div>
+
+            <div class="sidebar-section contact-info">
+                <h3>Contact</h3>
+                <p>Email: foysalmiah9443@gmail.com</p>
+                <p>Phone: 01763961312 </p>
+                <p>LinkedIn:linkedin.com/in/foysal-miah-145655317 </p>
+                <p>Website:</p>
+            </div>
+
+            
 </body>
+
 </html>
