--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bold Sidebar Resume</title>
-
+<link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -23,6 +23,38 @@
                 <p>LinkedIn:linkedin.com/in/foysal-miah-145655317 </p>
                 <p>Website:</p>
             </div>
+            <div class="sidebar-section skills">
+                <h3>Skills</h3>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Node.js</li>
+                    <li>CSS</li>
+                    <li>Project Mgmt</li>
+                </ul>
+            </div>
+        </aside>
+
+        <main class="main-content">
+            <section class="section summary">
+                <h2>Summary</h2>
+                <p>Creative and results-driven developer with 6+ years experience building robust web apps and leading
+                    agile teams. Passionate about clean code, user experience, and continuous learning.</p>
+            </section>
+
+            <section class="section experience">
+                <h2>Experience</h2>
+
+                <div class="job">
+                    <div class="job-title">Senior Software Engineer</div>
+                    <div class="company">Tech Innovators Inc.</div>
+                    <div class="date">Jan 2020 - Present</div>
+                    <ul class="responsibilities">
+                        <li>Lead frontend development on enterprise SaaS platform used by 1M+ users.</li>
+                        <li>Implemented scalable React architecture improving app performance by 40%.</li>
+                    </ul>
+                </div>
+
 
             
 </body>
