add skills ,summary and experience

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     <li>React</li>
                     <li>Node.js</li>
                     <li>CSS</li>
-                    <li>Project Mgmt</li>
+                    <li>mongo db </li>
+                    <li>React js</li>
+                    <li>Firebase</li>
                 </ul>
             </div>
         </aside>
@@ -38,20 +40,19 @@
         <main class="main-content">
             <section class="section summary">
                 <h2>Summary</h2>
-                <p>Creative and results-driven developer with 6+ years experience building robust web apps and leading
-                    agile teams. Passionate about clean code, user experience, and continuous learning.</p>
+                <p>Creative Passionate about clean code, user experience and continuous learning.</p>
             </section>
 
             <section class="section experience">
-                <h2>Experience</h2>
+                <h2> Experience</h2>
 
                 <div class="job">
-                    <div class="job-title">Senior Software Engineer</div>
-                    <div class="company">Tech Innovators Inc.</div>
-                    <div class="date">Jan 2020 - Present</div>
+                    <div class="job-title">Learning web development and work on it 2 years .</div>
+                    <div class="company">Bd Calling It Limited.</div>
+                    <div class="date">sep 2025 - Present</div>
                     <ul class="responsibilities">
-                        <li>Lead frontend development on enterprise SaaS platform used by 1M+ users.</li>
-                        <li>Implemented scalable React architecture improving app performance by 40%.</li>
+                        <li> I am learning with Bd Calling It Limited  web development for 3 month.</li>
+                        <li>I am working on real projects to build my portfolio.</li>
                     </ul>
                 </div>
 
