--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bold Sidebar Resume</title>
-<link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -51,13 +51,35 @@
                     <div class="company">Bd Calling It Limited.</div>
                     <div class="date">sep 2025 - Present</div>
                     <ul class="responsibilities">
-                        <li> I am learning with Bd Calling It Limited  web development for 3 month.</li>
+                        <li> I am learning with Bd Calling It Limited web development for 3 month.</li>
                         <li>I am working on real projects to build my portfolio.</li>
                     </ul>
                 </div>
 
+                <div class="job">
+                    <div class="job-title">Web Developer</div>
+                    <div class="company">Freelanching on Fiber & upwork</div>
+                    <div class="date">Jul 2023 - Dec 2025</div>
+                    <ul class="responsibilities">
+                        <li>Developed interactive web development using JavaScript, React, and Node.js,React js, etc
+                        </li>
+                        <li>Assistance with support sessions as needed has been taken.</li>
+                    </ul>
+                </div>
+            </section>
 
-            
+            <section class="section education">
+                <h2>Education</h2>
+
+                <div class="education-item">
+                    <div class="degree"> Diploma in Computer Science</div>
+                    <div class="school">University of Tangail Habhit</div>
+                    <div class="date">21-22</div>
+                </div>
+            </section>
+        </main>
+    </div>
+
 </body>
 
 </html>
