--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="sidebar-section contact-info">
                 <h3>Contact</h3>
                 <p>Email: foysalmiah8443@gmail.com</p>
-                <p>Phone: 01763961312 </p>
+                <p>Phone: 017639613** </p>
                 <p>LinkedIn:linkedin.com/in/foysal-miah-145655317 </p>
-                <p>Website:</p>
+                <p>Website: none </p>
             </div>
             <div class="sidebar-section skills">
                 <h3>Skills</h3>
